# imageFetch

./: .gitignore  README.md  image_fetch_gui.py  image_scraper.py  image_scraper_gui.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
scripts/: add_imagefetch_to_path.ps1
